[gd_scene load_steps=9 format=3 uid="uid://34axhhhrme4h"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_hshwe"]
[ext_resource type="Script" path="res://scripts/player/ActionPointsBar.gd" id="2_ydvrc"]
[ext_resource type="Script" path="res://scripts/player/MovePointsBar.gd" id="3_lchok"]
[ext_resource type="PackedScene" uid="uid://bdcys2bwnj5e5" path="res://assets/prefabs/UI/grenade_button.tscn" id="6_e7r6h"]
[ext_resource type="PackedScene" uid="uid://c6au4ft6g5mgf" path="res://scenes/tilemap_scenes/battle_arena.tscn" id="6_q7qsj"]
[ext_resource type="PackedScene" uid="uid://oxwjndfopy8r" path="res://assets/prefabs/UI/punch_button.tscn" id="7_hk2yq"]

[sub_resource type="LabelSettings" id="LabelSettings_ljfbr"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_ufang"]
script/source = "extends Button
"

[node name="ArenaScene" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_hshwe")

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 291.0
offset_bottom = -44.0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Очки действий"

[node name="AP" type="ProgressBar" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
show_percentage = false
script = ExtResource("2_ydvrc")

[node name="APCount" type="Label" parent="UI/VBoxContainer/AP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "4/4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Очки движений"

[node name="MP" type="ProgressBar" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
show_percentage = false
script = ExtResource("3_lchok")

[node name="MPCount" type="Label" parent="UI/VBoxContainer/MP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "5/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
text = "Закончить ход"

[node name="Actions" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="Grenade" parent="UI/Actions" instance=ExtResource("6_e7r6h")]
layout_mode = 2

[node name="Punch" parent="UI/Actions" instance=ExtResource("7_hk2yq")]
layout_mode = 2

[node name="ActionHint" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -235.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Описание действия"
label_settings = SubResource("LabelSettings_ljfbr")
horizontal_alignment = 1

[node name="GETBACK" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 50.0
text = "GETBACK"
script = SubResource("GDScript_ufang")

[node name="BattleArena" parent="." instance=ExtResource("6_q7qsj")]

[connection signal="Player_Critter_Added" from="GameManager" to="UI/VBoxContainer/AP" method="On_Player_Critter_Spawned"]
[connection signal="Player_Critter_Added" from="GameManager" to="UI/VBoxContainer/MP" method="On_Player_Critter_Spawned"]
[connection signal="pressed" from="UI/TurnButton" to="GameManager" method="switch_turns"]
[connection signal="pressed" from="UI/GETBACK" to="GameManager" method="return_to_menu"]
